Header collapse fixed

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -3,10 +3,12 @@
     height: 75px;
 }
 
-.navbar-collapse{
-    background-color: #FFC045;
-    border-radius: 0 0 8px 8px;
-    box-shadow: 0 5px rgba(0, 0, 0, 0.35);
-    padding: 16px;
-    z-index: 2;
+@media (max-width: 990px) {
+    .navbar-collapse{
+        background-color: #FFC045;
+        border-radius: 0 0 8px 8px;
+        box-shadow: 0 5px rgba(0, 0, 0, 0.35);
+        padding: 16px;
+        z-index: 2;
+    }
 }
