--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: url(/src/assets/images/espaço\ sideral\ 2.jpg) top center no-repeat;
+    background: url(/src/assets/images/pexels-felixmittermeier-1146134.jpg) top center;
 }
 
 .container {
